--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "pinia": "^2.0.17",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
